# optirust

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  client_secret_sample.json  dummy.rs  installer.sh
src/: app.rs  fixtures.rs  gcal.rs  gen.rs  main.rs  solver.rs  types.rs
